turtleart.lessons.turtleart.Main.Polygon7.scala.error
Source:4: error: too many arguments for method droite: (x$1: Double)Unit
		droite(360/7+0,5)
                      ^